working on ie fix

--- a/sass/mixins/_mixins-master.scss
+++ b/sass/mixins/_mixins-master.scss
@@ -10,6 +10,10 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+@mixin test($color) {
+  border: 1px solid $color;
+}
+
 @mixin max-width($maxWidth) {
 	max-width: $maxWidth;
 	margin-left: auto;
