--- a/sass/page-templates/sections/how-it-works/_how-it-works.scss
+++ b/sass/page-templates/sections/how-it-works/_how-it-works.scss
@@ -80,20 +80,27 @@ section.how-it-works {
     .column-wrapper {
       display: flex;
       flex-wrap: wrap;
+      // justify-content: space-between;
     }
 
     .inner-wrapper {
-      flex: 1 0 36%;
-      padding-left: 1em;
-      padding-right: 1em;
+      flex: 1 0 50%;
+      // padding-left: 1em;
+      // padding-right: 1em;
     }
 
     .title {
       font-size: 1.3em;
+      // @include test(black);
 
       &:before {
         height: 100px;
+        // @include test(black);
       }
+    }
+
+    .description {
+      // @include test(black);
     }
 
     .center-wrapper {
@@ -101,25 +108,26 @@ section.how-it-works {
     }
   }
 
-  @include respond-to(medium) {
-    .inner-wrapper {
-      padding-left: 3em;
-      padding-right: 3em;
-    }
-  }
+  // @include respond-to(medium) {
+  //   .inner-wrapper {
+  //     padding-left: 3em;
+  //     padding-right: 3em;
+  //   }
+  // }
 
   @include respond-to(large) {
     .wrapper {
-      @include max-width(1200px);
+      @include max-width(1100px);
     }
 
     .inner-wrapper {
-      padding-left: 4em;
-      padding-right: 4em;
+      // padding-left: 4em;
+      // padding-right: 4em;
+      // @include test(red);
     }
 
     .center-wrapper {
-      max-width: 500px;
+      // max-width: 500px;
 
       .title {
         font-size: 1.3em;
@@ -131,20 +139,20 @@ section.how-it-works {
     }
   }
 
-  @include respond-to(x-large) {
-    .wrapper {
-      @include max-width(1400px);
-    }
+  // @include respond-to(x-large) {
+  //   .wrapper {
+  //     @include max-width(1400px);
+  //   }
 
-    .inner-wrapper {
-      padding-left: 6em;
-      padding-right: 3em;
-    }
+  //   .inner-wrapper {
+  //     padding-left: 6em;
+  //     padding-right: 3em;
+  //   }
 
-    .center-wrapper {
-      .title {
-        font-size: 1.4em;
-      }
-    }
-  }
+  //   .center-wrapper {
+  //     .title {
+  //       font-size: 1.4em;
+  //     }
+  //   }
+  // }
 }
